fixed overflow

--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -23,7 +23,7 @@
     height: 100vh;
     /*background-color: #3E66D0;*/
     background-color: rgba(0, 0, 0, 0);
-    padding-top: 22.5vh;
+    padding-top: 22.4vh;
 }
 
 .MainPage .header-full .inner-header{
